--- a/styles.css
+++ b/styles.css
@@ -136,13 +136,16 @@ footer {
     border-radius: 50%;
     width: 30px;
     height: 30px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin-top: 10px;
     display: none; /* Hidden by default */
     animation: spin 1s linear infinite;
 }
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
 
 @keyframes spin {
     0% { transform: rotate(0deg); }
