--- a/bookings.css
+++ b/bookings.css
@@ -37,7 +37,8 @@
 
 @media (max-width: 1000px){
     .img-center-txt h1{
-        font-size: 55px;
+        white-space: nowrap;
+        font-size: 43px;
     }
 }
 
@@ -74,6 +75,16 @@
     font-size: 50px;
     margin-bottom: 20px;
     color: #000000;
+}
+
+@media (max-width: 700px){
+    .form-left-section h1{
+        font-size: 40px;
+    }
+
+    .form-right-section h2{
+        font-seze: 29px;
+    }
 }
 
 .form-left-section p {
